--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h2> <span class="bg-black text-white">Work <i class="fa fa-angle-double-right"></i></span><span class="d-block">What We Do <i class="fa fa-star"></i></span></h2>
             </div>
             <div class="masonry-grid row no-gutters">
-                <div class="masonry-grid-sizer col-sm-1"></div>
+                <!-- <div class="masonry-grid-sizer col-sm-1"></div> -->
 
                 <div class="masonry-grid-item col-sm-6 col-lg-4 g-pb-4">
                     <!-- Blog Grid Modern Blocks -->
