--- a/index.html
+++ b/index.html
@@ -185,6 +185,51 @@
     </div>
     <!-- End Blog Grid Blocks -->
 
+    <div class="divider-section py-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-md-offset-1">
+                    <div class="video mb-4">
+                        <div class="grid-img">
+                            <a href=""><img class="img-fluid w-100" src="assets/img/img5.jpg" alt="Image Description"></a>
+                        </div>
+                        <div class="grid-title">
+                            <h2>
+                                <a href="#">Vimeo Video with Lightbox</a>
+                            </h2>
+                        </div>
+                    </div>
+                    <!-- End Blog Grid Modern Blocks -->
+
+                    <div class="slider">
+                        <div class="grid-img gri-slider">
+                            <a href=""><img class="img-fluid w-100" src="assets/img/img5.jpg" alt="Image Description"></a>
+                        </div>
+                        <div class="grid-title">
+                            <h2>
+                                <a href="#">It will be Slider</a>
+                            </h2>
+                        </div>
+                    </div>
+                    <!-- End Blog Grid Modern Blocks -->
+                </div>
+                <div class="col-md-5 py-5 py-md-0">
+                    <div class="heading">
+                        <h2> <span class="bg-black text-white">Development</span><span class="d-block">& Production</span></h2>
+                    </div>
+                    <div class="g-mt-100 text-right">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing eeritatis aliquam nam fugit quos sunt provident. Dolorum, possimus!</p>
+                        <p>Rsum dolor sit amet consectetur adipisicing elit. Provident, necessitatibus!</p>
+
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="assets/img/divider-img.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- JS Global Compulsory -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
