--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- CSS Global Compulsory -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://vjs.zencdn.net/7.7.6/video-js.css" rel="stylesheet" />
 
     <!-- CSS Template -->
     <link rel="stylesheet" href="style.css">
@@ -34,7 +35,7 @@
     <header id="header" id="home">
         <div class="container main-menu">
             <div class="row">
-                <div class="col-lg-4 col-7 mx-lg-auto text-center">
+                <div class="col-lg-4 col-4 mx-lg-auto text-center">
                     <div id="logo" class="mb-0 mb-md-2">
                         <a href="index.html"><img class="img-fluid" src="assets/img/logo.png" alt=""></a>
                     </div>
@@ -480,6 +481,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/masonry.pkgd.min.js"></script>
+    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
 
 
     <!-- JS Template -->
