--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li class="menu-active"><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Work</a></li>
                         <li><a href="#">Clients</a></li>
@@ -64,7 +63,7 @@
 
     <!-- Site Heading and Description -->
     <div class="py-4">
-        <div class="container">
+        <div class="container px-5 px-md-3">
             <div class="row">
                 <div class="col-lg-12">
                     <video class="img-fluid rounded" autoplay loop>
@@ -371,7 +370,7 @@
                             <h2 class="h4">One-site, On Set. Online</h2>
                         </div>
                         <div class="col-md-6">
-                            <p class="pb-100 text-justify ff-ssp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, enim recusandae? Molestiae eum, aliquam placeat dolor error nobis velit, mollitia earum quis quisquam rerum. Nisi esse recusandae officia eligendi labore inventore voluptates sunt aut quod distinctio facere magni, excepturi eius id! Quo laboriosam consequuntur eligendi quod ad. Laboriosam, repellat ab?</p>
+                            <p class="pb-100 text-justify cta-text ff-ssp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, enim recusandae? Molestiae eum, aliquam placeat dolor error nobis velit, mollitia earum quis quisquam rerum. Nisi esse recusandae officia eligendi labore inventore voluptates sunt aut quod distinctio facere magni, excepturi eius id! Quo laboriosam consequuntur eligendi quod ad. Laboriosam, repellat ab?</p>
                             <hr class="divider">
                         </div>
                     </div>
