--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <!-- Grid Blocks -->
     <div class="grid-blocks bdg-danger py-100 pb-0">
-        <div class="container">
+        <div class="container px-5 px-md-3">
             <div class="heading d-inline-block">
                 <h2> <span class="bg-black text-white">Work <i class="fa fa-angle-double-right"></i></span><span
                         class="d-block">What We Do <i class="fa fa-star"></i></span></h2>
@@ -209,7 +209,7 @@
     <!-- End Blog Grid Blocks -->
 
     <div class="divider-section">
-        <div class="container">
+        <div class="container px-5 px-md-3">
             <div class="row">
                 <div class="col-lg-11 mx-auto">
                     <div class="row py-100">
@@ -264,7 +264,7 @@
 
     <!-- Grid Blocks -->
     <div class="grid-blocks bdg-danger py-100">
-        <div class="container">
+        <div class="container px-5 px-md-3">
 
             <div class="masonry-grid row ">
                 <div class="col-lg-11 mx-auto">
@@ -383,7 +383,7 @@
     <!-- End Blog Grid Blocks -->
 
     <div class="clients">
-        <div class="container">
+        <div class="container  px-5 px-md-3">
             <div class="heading d-inline-block">
                 <h2> <span class="bg-black text-white">Clients <i class="fa fa-angle-double-right"></i></span><span
                         class="d-block">Past & Present <i class="fa fa-star"></i></span></h2>
