--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <div class="grid-blocks bdg-danger py-100 pb-0">
         <div class="container px-5 px-md-3">
             <div class="heading d-inline-block">
-                <h2> <span class="bg-black text-white">Work <i class="fa fa-angle-double-right"></i></span><span
-                        class="d-block">What We Do <i class="fa fa-star"></i></span></h2>
+                <h2> <span class="bg-black text-white pr-4">Work >></span><span
+                        class="d-block">What We Do *</span></h2>
             </div>
 
             <div class="masonry-grid row ">
@@ -211,9 +211,9 @@
     <div class="divider-section">
         <div class="container px-5 px-md-3">
             <div class="row">
-                <div class="col-lg-11 mx-auto">
+                <div class="col-lg-10 mx-auto">
                     <div class="row py-100">
-                        <div class="col-md-3 col-md-offset-1">
+                        <div class="col-md-2 mt-5">
                             <div class="video mb-4">
                                 <div class="grid-img">
                                     <a href=""><img class="img-fluid w-100" src="assets/img/img5.jpg"
@@ -240,12 +240,13 @@
                             </div>
                             <!-- End Blog Grid Modern Blocks -->
                         </div>
-                        <div class="col-md-5 py-5 py-md-0">
+                        <div class="col-md-6 py-5 py-md-0">
+                            
                             <div class="heading">
                                 <h2> <span class="bg-black text-white">Development</span><span class="d-block">&
                                         Production</span></h2>
                             </div>
-                            <div class="g-mt-100 text-right ff-ssp">
+                            <div class="g-mt-100 text-right mr-5 ff-ssp">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing eeritatis aliquam nam fugit quos
                                     sunt provident. Dolorum, possimus!</p>
                                 <p>Rsum dolor sit amet consectetur adipisicing elit. Provident, necessitatibus!</p>
@@ -253,6 +254,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
+                            <div class="line-top"></div>
                             <img class="img-fluid" src="assets/img/divider-img.png" alt="">
                         </div>
                     </div>
@@ -385,8 +387,8 @@
     <div class="clients">
         <div class="container  px-5 px-md-3">
             <div class="heading d-inline-block">
-                <h2> <span class="bg-black text-white">Clients <i class="fa fa-angle-double-right"></i></span><span
-                        class="d-block">Past & Present <i class="fa fa-star"></i></span></h2>
+                <h2> <span class="bg-black text-white pr-4">Clients >></span><span
+                        class="d-block">Past & Present *</span></h2>
             </div>
             <div class="row">
                 <div class="col-lg-11 mx-auto">
