--- a/index.html
+++ b/index.html
@@ -367,12 +367,15 @@
                         </div>
                     </div>
 
-                    <div class="row cta pt-100">
+                    <div class="row cta pt-100 px-5">
                         <div class="col-md-6">
                             <h2 class="h4">One-site, On Set. Online</h2>
                         </div>
                         <div class="col-md-6">
-                            <p class="pb-100 text-justify cta-text ff-ssp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, enim recusandae? Molestiae eum, aliquam placeat dolor error nobis velit, mollitia earum quis quisquam rerum. Nisi esse recusandae officia eligendi labore inventore voluptates sunt aut quod distinctio facere magni, excepturi eius id! Quo laboriosam consequuntur eligendi quod ad. Laboriosam, repellat ab?</p>
+                            <p class="pb-100 text-justify cta-text ff-ssp">Our <strong>mobile post house</strong> is built around flexibility, allowing our client facing, friendly team to quickly parachute into an existing location or work remotely to execute briefs with exceptional creativity. We love a challenge and would love to get involved, see please do say:
+<br>
+<br>
+                                <strong>hello@controlpost.org</strong></p>
                             <hr class="divider">
                         </div>
                     </div>
