--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
                     <div class="row cta pt-100 px-5">
                         <div class="col-md-6">
-                            <h2 class="h4">One-Site, On Set. Online</h2>
+                            <h2 class="h4">One-Site. On Set. Online</h2>
                         </div>
                         <div class="col-md-6">
                             <p class="pb-100 text-justify cta-text ff-ssp">Our <strong>mobile post house</strong> is built around flexibility, allowing our client facing, friendly team to quickly parachute into an existing location or work remotely to execute briefs with exceptional creativity. We love a challenge and would love to get involved, see please do say:
